--- a/bio.html
+++ b/bio.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Syeda Islam Junior Portfolio</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="favicon.png" rel="icon" type="image/png">
+  </head>
+  <body>
+    <div class="links">                                                                                
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="bio.html">Bio</a>
+        <a href="nb.html">Digital Notebook</a>
+        <a href="cfu.html">CFU's</a>
+        <a href="labs.html">Labs</a>
+      </nav>
+    </div>
+    
+  </body>
+</html>
